--- a/Jail Break.inform/Index/Contents.html
+++ b/Jail Break.inform/Index/Contents.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<349;i++) {
+            for (var i=0;i<350;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -702,8 +702,8 @@
     </td>
     </tr></table>
     <p><b>Jail Break by tendo19</b></p><p>CONTENTS</p><ul class="leaders">
-    <li class="leaded indent1"><span>Source text</span><span>67 words&nbsp;<a href="source:story.ni#line1"><img border=0 src=inform:/doc_images/Reveal.tif></a></span></li></ul>
-    <p class="hangingin2"><font color="#808080"><i>Your Cell</i></font></p>
+    <li class="leaded indent1"><span>Source text</span><span>419 words&nbsp;<a href="source:story.ni#line1"><img border=0 src=inform:/doc_images/Reveal.tif></a></span></li></ul>
+    <p class="hangingin2"><font color="#808080"><i>Cell Room 1</i>, <i>Cell Room 2</i>, <i>Prison Bathroom</i>, <i>Cafeteria</i>, <i>East Security Room</i>, <i>South Security Room</i>, <i>security checkpoint 1</i>, <i>security checkpoint 2</i>, <i>Freedom</i></font></p>
     <p>(This would look more like a contents page if the source text were divided up into headings.&nbsp;<a href=inform:/doc14.html><img border=0 src=inform:/doc_images/help.png></a>)</p>
     <p>EXTENSIONS</p>
     <p class="hangingin2"><font color="#888">Included automatically by Inform</font></p><ul class="leaders"><li class="leaded indent2"><span>Standard Rules <a href='inform://Extensions/Extensions/Graham%20Nelson/Standard%20Rules.html' title="Standard Rules by Graham Nelson" STYLE="text-decoration: none"><img border=0 src=inform:/doc_images/help.png></a> <small>version 3/120430</small></span><span>42655 words</span></li></ul>
